feat: Add interactive logo and hero name animations, introduce featured project highlights, and refine UI styling with shadows and layout adjustments.

--- a/art.html
+++ b/art.html
@@ -1,105 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art - Patrick Taylor | Drawings & Creative Work</title>
-    <meta
-      name="description"
-      content="Art, drawings, and creative work by Patrick Taylor."
-    />
-    <meta
-      name="keywords"
-      content="art, drawings, watercolor, pencil drawings, creative work, Patrick Taylor art"
-    />
-    <meta name="author" content="Patrick Taylor" />
-    <link rel="canonical" href="https://ptrcktylr.com/art.html" />
 
-    <!-- Open Graph / Social Media -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ptrcktylr.com/art.html" />
-    <meta property="og:title" content="Patrick Taylor — Art" />
-    <meta
-      property="og:description"
-      content="Art, drawings, and creative work by Patrick Taylor."
-    />
-    <meta
-      property="og:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Art - Patrick Taylor | Drawings & Creative Work</title>
+  <meta name="description" content="Art, drawings, and creative work by Patrick Taylor." />
+  <meta name="keywords" content="art, drawings, watercolor, pencil drawings, creative work, Patrick Taylor art" />
+  <meta name="author" content="Patrick Taylor" />
+  <link rel="canonical" href="https://ptrcktylr.com/art.html" />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/art.css" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  </head>
-  <body>
-    <nav class="nav">
-      <div class="nav-container">
-        <a href="index.html" class="logo">PT</a>
-        <ul class="nav-links">
-          <li><a href="work.html">work</a></li>
-          <li><a href="art.html" class="active">art</a></li>
-          <li><a href="resume.html">resume</a></li>
-          <li><a href="psych.html">psych</a></li>
-          <li><a href="index.html#about">about</a></li>
-          <li>
-            <button
-              id="theme-toggle"
-              class="theme-toggle"
-              aria-label="Toggle dark mode"
-            >
-              <span class="theme-icon">◐</span>
-            </button>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ptrcktylr.com/art.html" />
+  <meta property="og:title" content="Patrick Taylor — Art" />
+  <meta property="og:description" content="Art, drawings, and creative work by Patrick Taylor." />
+  <meta property="og:image" content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg" />
 
-    <main class="art-page">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/art.css" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+</head>
+
+<body>
+  <nav class="nav">
+    <div class="nav-container">
+      <a href="index.html" class="logo">PT</a>
+      <ul class="nav-links">
+        <li><a href="work.html">work</a></li>
+        <li><a href="art.html" class="active">art</a></li>
+        <li><a href="psych.html">psych</a></li>
+        <li><a href="resume.html">resume</a></li>
+        <li><a href="index.html#about">about</a></li>
+        <li>
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+            <span class="theme-icon">◐</span>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <main class="art-page">
+    <section class="page-hero">
       <div class="container">
-        <header class="page-header">
-          <h1>Art</h1>
-        </header>
+        <h1>Art</h1>
+        <p class="page-subtitle">
+          drawings, doodles, and creative experiments
+        </p>
+      </div>
+    </section>
 
-        <div class="art-grid">
-          <div class="art-item">
-            <img
-              src="images/art/20260104151704_001.jpg"
-              alt="Doodles 1, 2025"
-              class="art-image"
-              loading="lazy"
-            />
-            <div class="art-caption">
-              <p class="art-title">Doodles 1</p>
-              <p class="art-year">2026</p>
-              <p class="art-medium">Pencil and pen on paper</p>
-            </div>
+    <div class="art-content">
+      <div class="art-grid">
+        <div class="art-item">
+          <img src="images/art/20260104151704_001.jpg" alt="Doodles 1, 2025" class="art-image" loading="lazy" />
+          <div class="art-caption">
+            <p class="art-title">Doodles 1</p>
+            <p class="art-year">2026</p>
+            <p class="art-medium">Pencil and pen on paper</p>
           </div>
+        </div>
 
-          <div class="art-item">
-            <img
-              src="images/art/20260104144218_001.jpg"
-              alt="Untitled, 2025"
-              class="art-image"
-              loading="lazy"
-            />
-            <div class="art-caption">
-              <p class="art-untitle">Untitled</p>
-              <p class="art-year">2025</p>
-              <p class="art-medium">Watercolor on paper</p>
-            </div>
+        <div class="art-item">
+          <img src="images/art/20260104144218_001.jpg" alt="Untitled, 2025" class="art-image" loading="lazy" />
+          <div class="art-caption">
+            <p class="art-untitle">Untitled</p>
+            <p class="art-year">2025</p>
+            <p class="art-medium">Watercolor on paper</p>
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer class="footer">
-      <div class="container">
-        <p>&copy; 2026 Patrick Taylor</p>
-      </div>
-    </footer>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2026 Patrick Taylor</p>
+    </div>
+  </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/art.js"></script>
-  </body>
+  <script src="js/main.js"></script>
+  <script src="js/art.js"></script>
+</body>
+
 </html>
