--- a/index.html
+++ b/index.html
@@ -1,52 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Patrick Taylor — Full-Stack Developer & Digital Solutions | Auckland, NZ
-    </title>
-    <meta
-      name="description"
-      content="Full-Stack Developer & Digital Solutions, and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
-    />
-    <meta
-      name="keywords"
-      content="full-stack developer, digital solutions, web developer, backend developer, Auckland developer, New Zealand developer, Patrick Taylor"
-    />
-    <meta name="author" content="Patrick Taylor" />
-    <link rel="canonical" href="https://ptrcktylr.com/" />
 
-    <!-- Open Graph / Social Media -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ptrcktylr.com/" />
-    <meta property="og:title" content="Patrick Taylor" />
-    <meta
-      property="og:description"
-      content="Full-Stack Developer & Digital Solutions"
-    />
-    <meta
-      property="og:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Patrick Taylor — Full-Stack Developer & Digital Solutions | Auckland, NZ
+  </title>
+  <meta name="description"
+    content="Full-Stack Developer & Digital Solutions, and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax." />
+  <meta name="keywords"
+    content="full-stack developer, digital solutions, web developer, backend developer, Auckland developer, New Zealand developer, Patrick Taylor" />
+  <meta name="author" content="Patrick Taylor" />
+  <link rel="canonical" href="https://ptrcktylr.com/" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ptrcktylr.com/" />
-    <meta property="twitter:title" content="Patrick Taylor" />
-    <meta
-      property="twitter:description"
-      content="Full-Stack Developer & Digital Solutions"
-    />
-    <meta
-      property="twitter:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
-    />
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ptrcktylr.com/" />
+  <meta property="og:title" content="Patrick Taylor" />
+  <meta property="og:description" content="Full-Stack Developer & Digital Solutions" />
+  <meta property="og:image" content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-    <!-- Structured Data / Schema.org -->
-    <script type="application/ld+json">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ptrcktylr.com/" />
+  <meta property="twitter:title" content="Patrick Taylor" />
+  <meta property="twitter:description" content="Full-Stack Developer & Digital Solutions" />
+  <meta property="twitter:image" content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg" />
+
+  <!-- Structured Data / Schema.org -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
@@ -72,213 +57,164 @@
       }
     </script>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  </head>
-  <body>
-    <nav class="nav">
-      <div class="nav-container">
-        <a href="index.html" class="logo">PT</a>
-        <ul class="nav-links">
-          <li><a href="work.html">work</a></li>
-          <li><a href="art.html">art</a></li>
-          <li><a href="resume.html">resume</a></li>
-          <li><a href="psych.html">psych</a></li>
-          <li><a href="#about">about</a></li>
-          <li>
-            <button
-              id="theme-toggle"
-              class="theme-toggle"
-              aria-label="Toggle dark mode"
-            >
-              <span class="theme-icon">◐</span>
-            </button>
-          </li>
-        </ul>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+</head>
+
+<body>
+  <nav class="nav">
+    <div class="nav-container">
+      <a href="index.html" class="logo">PT</a>
+      <ul class="nav-links">
+        <li><a href="work.html">work</a></li>
+        <li><a href="art.html">art</a></li>
+        <li><a href="psych.html">psych</a></li>
+        <li><a href="resume.html">resume</a></li>
+        <li><a href="#about">about</a></li>
+        <li>
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+            <span class="theme-icon">◐</span>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <main>
+    <section class="hero">
+      <div class="hero-background">
+        <img src="images/art/20260104144218_001.jpg" alt="" class="hero-art" loading="eager" />
       </div>
-    </nav>
-
-    <main>
-      <section class="hero">
-        <div class="hero-background">
-          <img
-            src="images/art/20260104144218_001.jpg"
-            alt=""
-            class="hero-art"
-            loading="eager"
-          />
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
+        <h1 class="hero-name">Patrick Taylor</h1>
+        <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
+        <p class="location">Auckland, NZ / New York, NY</p>
+        <div class="hero-cta">
+          <a href="work.html" class="cta-button-hero">View My Work</a>
+          <a href="mailto:me@ptrcktylr.com" class="cta-button-hero secondary">Get in Touch</a>
         </div>
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-          <h1 class="animate__animated animate__fadeInDown">Patrick Taylor</h1>
-          <p class="subtitle">Full-Stack Developer & Digital Solutions</p>
-          <p class="location">Auckland, NZ / New York, NY</p>
-          <div class="hero-cta">
-            <a href="work.html" class="cta-button-hero">View My Work</a>
-            <a href="mailto:me@ptrcktylr.com" class="cta-button-hero secondary">Get in Touch</a>
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="work" class="section">
-        <div class="container">
-          <h2 class="section-title">Selected Work</h2>
-          <div class="projects-grid">
-            <div class="project-card">
-              <div class="project-header">
-                <h3>BuildRight NZ</h3>
-                <span class="project-tag">Web Design</span>
-              </div>
-              <p class="project-description">
-                Modern landing page for Auckland construction company with interactive before/after slider, quote form, and dark mode.
-              </p>
-              <div class="project-links">
-                <a
-                  href="buildright-nz.html"
-                  target="_blank"
-                  class="link"
-                  >View Live Demo</a
-                >
-              </div>
-            </div>
-
-            <div class="project-card">
-              <div class="project-header">
-                <h3>Portfolio Sites</h3>
-                <span class="project-tag">Web Dev</span>
-              </div>
-              <p class="project-description">
-                Custom static websites with responsive galleries, dark mode, and
-                optimized performance. Clean code, zero dependencies.
-              </p>
-              <div class="project-links">
-                <a
-                  href="https://margaretbewley.com"
-                  target="_blank"
-                  class="link"
-                  >margaretbewley.com</a
-                >
-              </div>
-            </div>
-
-            <div class="project-card">
-              <div class="project-header">
-                <h3>NYC Median Income Visualization</h3>
-                <span class="project-tag">Data Viz</span>
-              </div>
-              <p class="project-description">
-                Interactive map showing household income data across NYC zip
-                codes from 2011-2018. Built with Python, Bokeh, and Pandas using
-                IRS data.
-              </p>
-              <div class="project-links">
-                <a
-                  href="https://github.com/ptrcktylr/nyc-income"
-                  target="_blank"
-                  class="link"
-                  >GitHub</a
-                >
-                <a
-                  href="https://nyc-income.onrender.com"
-                  target="_blank"
-                  class="link"
-                  >View Live</a
-                >
-              </div>
-            </div>
-
-            <div class="project-card">
-              <div class="project-header">
-                <h3>Splat Issue Tracker</h3>
-                <span class="project-tag">Full Stack</span>
-              </div>
-              <p class="project-description">
-                Ticketing system for developers and project managers. Django
-                backend with PostgreSQL and AWS integration.
-              </p>
-              <div class="project-links">
-                <a
-                  href="https://github.com/ptrcktylr/splat-issue-tracker"
-                  target="_blank"
-                  class="link"
-                  >GitHub</a
-                >
-                <a
-                  href="https://splat-issue-tracker.onrender.com"
-                  target="_blank"
-                  class="link"
-                  >View Live</a
-                >
-              </div>
-            </div>
-
-            <div class="project-card">
-              <div class="project-header">
-                <h3>SentiMental Health</h3>
-                <span class="project-tag">Full Stack</span>
-              </div>
-              <p class="project-description">
-                Mental health journaling platform with sentiment analysis using
-                DeepAI. Patients post entries, track mood progress, and connect
-                with assigned professionals. Built with Java/Spring Boot,
-                Angular, and Gradle.
-              </p>
-              <div class="project-links">
-                <a
-                  href="https://github.com/ptrcktylr/mental-health-app"
-                  target="_blank"
-                  class="link"
-                  >GitHub</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="about" class="section about-section">
-        <div class="container">
-          <h2 class="section-title">About</h2>
-          <div class="about-content">
-            <p>
-              Full-stack developer & digital solutions currently based in
-              Auckland, NZ. Originally from New York. Previously a software
-              engineer at Equifax working on cloud platforms and reliability.
-            </p>
-            <p>
-              I build things with code. Sometimes they're practical, sometimes
-              they're experimental.
-            </p>
-            <p>
-              Future psychiatrist exploring psychology, psychedelic-assisted
-              therapy, and consciousness. This site will grow to include art,
-              music, and recommended readings as I continue exploring what it
-              means to create authentically.
-            </p>
-            <div class="contact-links">
-              <a href="mailto:me@ptrcktylr.com" class="link">Email</a>
-              <a
-                href="https://github.com/ptrcktylr"
-                target="_blank"
-                class="link"
-                >GitHub</a
-              >
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
+    <section id="work" class="section">
       <div class="container">
-        <p>&copy; 2026 Patrick Taylor</p>
-      </div>
-    </footer>
+        <h2 class="section-title">Selected Work</h2>
+        <div class="projects-grid">
+          <div class="project-card">
+            <div class="project-header">
+              <h3>BuildRight NZ</h3>
+              <span class="project-tag">Web Design</span>
+            </div>
+            <p class="project-description">
+              Modern landing page for Auckland construction company with interactive before/after slider, quote form,
+              and dark mode.
+            </p>
+            <div class="project-links">
+              <a href="buildright-nz.html" target="_blank" class="link">View Live Demo</a>
+            </div>
+          </div>
 
-    <script src="js/main.js"></script>
-  </body>
+          <div class="project-card">
+            <div class="project-header">
+              <h3>Portfolio Sites</h3>
+              <span class="project-tag">Web Dev</span>
+            </div>
+            <p class="project-description">
+              Custom static websites with responsive galleries, dark mode, and
+              optimized performance. Clean code, zero dependencies.
+            </p>
+            <div class="project-links">
+              <a href="https://margaretbewley.com" target="_blank" class="link">margaretbewley.com</a>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <div class="project-header">
+              <h3>NYC Median Income Visualization</h3>
+              <span class="project-tag">Data Viz</span>
+            </div>
+            <p class="project-description">
+              Interactive map showing household income data across NYC zip
+              codes from 2011-2018. Built with Python, Bokeh, and Pandas using
+              IRS data.
+            </p>
+            <div class="project-links">
+              <a href="https://github.com/ptrcktylr/nyc-income" target="_blank" class="link">GitHub</a>
+              <a href="https://nyc-income.onrender.com" target="_blank" class="link">View Live</a>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <div class="project-header">
+              <h3>Splat Issue Tracker</h3>
+              <span class="project-tag">Full Stack</span>
+            </div>
+            <p class="project-description">
+              Ticketing system for developers and project managers. Django
+              backend with PostgreSQL and AWS integration.
+            </p>
+            <div class="project-links">
+              <a href="https://github.com/ptrcktylr/splat-issue-tracker" target="_blank" class="link">GitHub</a>
+              <a href="https://splat-issue-tracker.onrender.com" target="_blank" class="link">View Live</a>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <div class="project-header">
+              <h3>SentiMental Health</h3>
+              <span class="project-tag">Full Stack</span>
+            </div>
+            <p class="project-description">
+              Mental health journaling platform with sentiment analysis using
+              DeepAI. Patients post entries, track mood progress, and connect
+              with assigned professionals. Built with Java/Spring Boot,
+              Angular, and Gradle.
+            </p>
+            <div class="project-links">
+              <a href="https://github.com/ptrcktylr/mental-health-app" target="_blank" class="link">GitHub</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="section about-section">
+      <div class="container">
+        <h2 class="section-title">About</h2>
+        <div class="about-content">
+          <p>
+            Full-stack developer & digital solutions currently based in
+            Auckland, NZ. Originally from New York. Previously a software
+            engineer at Equifax working on cloud platforms and reliability.
+          </p>
+          <p>
+            I build things with code. Sometimes they're practical, sometimes
+            they're experimental.
+          </p>
+          <p>
+            Future psychiatrist exploring psychology, psychedelic-assisted
+            therapy, and consciousness. This site will grow to include art,
+            music, and recommended readings as I continue exploring what it
+            means to create authentically.
+          </p>
+          <div class="contact-links">
+            <a href="mailto:me@ptrcktylr.com" class="link">Email</a>
+            <a href="https://github.com/ptrcktylr" target="_blank" class="link">GitHub</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2026 Patrick Taylor</p>
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
