--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     content="Custom websites and digital solutions. View my portfolio of web design and development projects." />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 </head>
 
 <body>
