fix: Update BuildRight NZ project page links to reflect the new `projects/` directory structure.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               and dark mode.
             </p>
             <div class="project-links">
-              <a href="buildright-nz.html" target="_blank" class="link">View Live Demo</a>
+              <a href="projects/buildright-nz.html" target="_blank" class="link">View Live Demo</a>
             </div>
           </div>
 
