--- a/work.html
+++ b/work.html
@@ -50,11 +50,11 @@
               <h2>BuildRight NZ</h2>
               <span class="project-tag">Web Design & Development</span>
             </div>
-            <a href="buildright-nz.html" target="_blank" class="cta-button">View Live Demo</a>
+            <a href="projects/buildright-nz.html" target="_blank" class="cta-button">View Live Demo</a>
           </div>
 
           <div class="featured-project-image">
-            <a href="buildright-nz.html" target="_blank">
+            <a href="projects/buildright-nz.html" target="_blank">
               <img src="images/projects/buildright-nz.png" alt="BuildRight NZ website screenshot" loading="lazy" />
             </a>
           </div>
